packages/yew-functional-macro/tests/function_attr/applied-to-non-fn-fail.stderr
error: `function_component` attribute can only be applied to functions
  --> $DIR/applied-to-non-fn-fail.rs:10:1
   |
10 | struct Test;
   | ^^^^^^^^^^^^
