packages/yew-functional-macro/tests/function_attr/applied-to-non-fn-fail.rs
use yew::prelude::*;
use yew_functional::function_component;

#[derive(Clone, Properties, PartialEq)]
struct Props {
    a: usize,
}

#[function_component(Comp)]
struct Test;

fn main() {}
